# cspark-cicd-lesson

./: README.md
.github/workflows/: helloworld.yaml  python-ci.yaml
my_package/: README.md  pyproject.toml
my_package/appvinj/: app.py
my_package/tests/: test_add.py
